[package]
name = "news-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacon = "2.2.5"
colour = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
ureq = "2.5.0"
